--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    font-size: 16px;
+}
+
 body {
     margin: 0;
 }
@@ -6,4 +10,27 @@ ul, li {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+.main-ttl {
+    height: 4rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* GRID */
+
+.grid {
+    width: calc(100vmin - 4rem);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    margin: 0 auto;
+    background-color: lightskyblue;
+
+}
+
+.grid > li {
+    aspect-ratio: 1 / 1;
+    background-color: white;
 }
