--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     font-size: 16px;
 }
 
-body {
+body, p {
     margin: 0;
+    padding: 0;
 }
 
 ul, li {
@@ -18,6 +19,16 @@ ul, li {
     text-align: center;
 }
 
+.learn {
+    height: 4rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.learn-msg {
+    
+}
+
 .info {
     height: 2rem;
     text-align: center;
@@ -26,7 +37,7 @@ ul, li {
 /* GRID */
 
 .grid {
-    width: calc(100vmin - 6rem);
+    width: calc(100vmin - 10rem);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
