--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 :root {
     font-size: 16px;
+
+    --primary-color: #edf67d;
+    --secondary-color: #f896d8;
+    --third-color: #8d8886;
+    --fourth-color: #724cf9;
+    --fifth-color: #564592;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body, p {
@@ -60,4 +70,36 @@ ul, li {
 }
 .grid > li.win {
     background-color: lightgreen;
+}
+
+/* PROGRESS WIN */
+
+.progress-win {
+    display: flex;
+    width: 100%;
+    height: 3rem;
+}
+.progress-win-one,
+.progress-win-equality,
+.progress-win-two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    height: 100%;
+    width: calc(100% / 3);
+    overflow: hidden;
+}
+.progress-win-one {
+    background-color: var(--primary-color);
+    justify-content: flex-start;
+
+}
+.progress-win-equality {
+    background-color: var(--third-color);
+
+}
+.progress-win-two {
+    background-color: var(--fourth-color);
+    justify-content: flex-end;
 }
