--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 :root {
     font-size: 16px;
 
@@ -5,101 +7,297 @@
     --secondary-color: #f896d8;
     --third-color: #8d8886;
     --fourth-color: #724cf9;
-    --fifth-color: #564592;
+    --fifth-color: #BDFFFD;
 }
 
 * {
     box-sizing: border-box;
 }
 
-body, p {
+body,
+p,
+h1,
+h2,
+h3 {
     margin: 0;
     padding: 0;
 }
 
-ul, li {
+ul,
+li {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .main-ttl {
-    height: 4rem;
-    margin: 0 auto;
+    font-size: 3rem;
     text-align: center;
-}
-
-.learn {
-    height: 4rem;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.learn-msg {
-    
 }
 
 .info,
 .start-game {
-    height: 2rem;
+    min-height: 5rem;
     text-align: center;
+}
+
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 400px;
+    gap: 2rem;
+    padding: 2rem;
+    height: 100vh;
+}
+
+.bloc {
+    padding: 2rem;
+    background-color: var(--fifth-color);
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.bloc-hidden {
+    visibility: hidden;
 }
 
 /* GRID */
 
 .grid {
-    width: calc(100vmin - 10rem);
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     margin: 0 auto;
-    background-color: lightskyblue;
-    font-size:4rem;
+    background-color: var(--third-color);
+    font-size: 4rem;
 }
 
-.grid > li {
+.grid>li {
     display: flex;
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
     background-color: white;
 }
-.grid > li.win {
-    background-color: lightgreen;
+
+.grid>li.win {
+    background-color: var(--secondary-color);
 }
 
 /* PROGRESS WIN */
 
 .progress-win {
     display: flex;
+    justify-content: space-between;
+    align-items: stretch;
     width: 100%;
-    height: 3rem;
+    height: 5rem;
+    font-size: 1rem;
 }
+
+.progress-win .symbol {
+    font-size: 2rem;
+}
+
 .progress-win-one,
-.progress-win-equality,
 .progress-win-two {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    width: calc(100% / 3);
+    transition: width 200ms ease-in-out;
+}
+
+.progress-win-one {
+    background-color: var(--primary-color);
+
+}
+
+.progress-win-two {
+    color: white;
+    background-color: var(--fourth-color);
+}
+
+
+/* PROGRESS LEARN */
+
+.progress-learn {
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    height: 5rem;
+    font-size: 1rem;
+    background-color: white;
+}
+
+.progress-learn-value {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1rem;
+    background-color: var(--secondary-color);
+    transition: width 200ms ease-in-out;
+    position: relative;
+
+}
+
+
+.loading {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    border: 3px solid rgba(255, 255, 255, .3);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+    position: absolute;
+    top: calc(50% - 1rem);
+    left: 1rem;
+}
+
+@keyframes spin {
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+
+/* NEURONAL NETWORK  */
+.network,
+.network-inter {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+.layer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.layer-inter {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+}
+
+.layer-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+.neuron {
+    width: 2rem;
+    height: 2rem;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
-    height: 100%;
-    width: calc(100% / 3);
-    overflow: hidden;
+    font-size: 14px;
+    position: relative;
+    transition: background-color 200ms ease-in-out;
 }
-.progress-win-one {
-    background-color: var(--primary-color);
-    justify-content: flex-start;
 
+.neuron-xxs {
+    width: .8rem;
+    height: .8rem;
+    display: inline-block;
 }
-.progress-win-equality {
+
+.neuron-info {
+    font-size: .8rem;
+}
+
+.button {
+    border: none;
+    padding: .5rem 1rem;
+    border-radius: 1rem;
     background-color: var(--third-color);
-
+    transition: background-color 200ms ease-in-out;
+    font-size: 1rem;
+    color: white;
+    cursor: pointer;
+    margin: 1rem 0;
 }
-.progress-win-two {
+
+.button:hover {
     background-color: var(--fourth-color);
-    justify-content: flex-end;
+}
+
+.autoplay {
+    position: absolute;
+    left: 0;
+    top: 50%;
+}
+
+.game-info {
+    position: relative;
+}
+
+.info {
+    font-size: 2rem;
+}
+
+.progress-count,
+.progress-learn-count {
+    font-size: .8rem;
+    font-style: italic;
+}
+
+.arrow-right {
+    position: relative;
+}
+
+.arrow-right::after {
+    content: "";
+    position: absolute;
+    right: -2rem;
+    top: calc(50% - 2rem);
+    width: 0;
+    height: 0;
+
+    border-top: 2rem solid transparent;
+    border-bottom: 2rem solid transparent;
+
+    border-left: 1.5rem solid var(--third-color);
+    opacity: .5;
+}
+
+.victories-ttl {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0  ;
+}
+
+.victories-ttl .button {
+    margin: 0;
 }
